<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ARLearn</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    
    <string name="networkUnavailable">Kan geen internet verbinding vinden\n Probeer later opnieuw</string>
    <string name="networkUnavailable2">Kan geen verbinding maken met de synchronisatie-server</string>
    
     <!--Menu Strings-->
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="exit">EXIT</string>
    <string name="creategame">AUTHORING TOOL</string>
    <string name="mattitle">Mobile Authoring Tool</string>
    
    
     <!--Login Activity Strings-->
    <string name="loginHeader">Aanmelden met uw Google account</string>
    <string name="uNameHint">E-mail</string>
    <string name="passwordHint">Wachtwoord</string>
    <string name="emailMissing">Aanmelden niet geslaagd:\n gebruikersnaam ontbreekt</string>
    <string name="pwMissing">Aanmelden niet geslaagd:\n wachtwoord ontbreekt</string>
    <string name="serviceMissing">Aanmelden niet geslaagd:\n interne fout, service ontbreekt</string>
    <string name="loginFailed">Aanmelden voor ***  is niet geslaagd</string>
    <string name="checkCredentials">Verificatie wachtwoord</string>
    <string name="sendInstructions">Send me instructions</string>
    <string name="correctDateSettings">Tijdsinstelling van de telefoon zijn fout. \n Corrigeer tijd en datum om verder te gaan.</string>
    
     <!--NfcScanOnDemand Activity Strings-->
     <string name="scanTag">Scan een NFC tag of een barcode</string>
     <string name="scanTagMenu">Scan barcode</string>
     <string name="cancel">Annuleer</string>
     
     <!--List Runs Participate Activity Strings-->
    <string name="listExcursionsHeader">Selecteer een run</string>
    <string name="loadingExcursions">Excursies worden geladen\n Even geduld</string>
    <string name="registerRun">Wil je je voor deze run registreren?</string>
    <string name="cacheGame">Wil je dit spel downloaden voor offline gebruik?</string>
    <string name="delete">Delete</string>
    <string name="scanRun">Scan Run Tag</string>
    
     <!--List Open Runs Strings-->
    <string name="noMatchingRuns">Er komen geen runs met deze tag overeen</string>
    <string name="noMoreMatchingRuns">Je bent reeds voor alle overeenkomstige runs ingeschreven</string>
    <string name="addOpenRunTitle">Selecteer run om toe te voegen</string>
    
    <!--Map View Activity Strings-->
    <string name="mapViewHeader">Excursie</string>
    <string name="messagesMenu">Messages</string>
    <string name="myLocationMenu">My Location</string>
    
     <!--Multiple Choice Detail Activity Strings-->
    <string name="mct_header">Multiple Choice Question</string>
    <string name="mct_submit">Submit vote</string>
    
    <!--Audio Object Activity Strings-->
    <string name="ao_answer_menu">Provide Answer</string>
    
    <!--Answer Activity Strings-->
    <string name="answerQuestionHeader">Beantwoord vraag</string>
    <string name="annotateCounterReset">00:00.0</string>
    <string name="removePicture">Deze afbeelding verwijderen?</string>
    <string name="gpsOff">GPS uitgeschakeld. Zet gps aan en publiceer opnieuw. </string>
    <string name="nothingToPublish">Niets te publiceren</string>
    <string name="addVideo">Maak video</string>
    <string name="addPicture">Maak een foto</string>
      
    <!--Display Message Activity Strings-->
    <string name="messageHeader">Message</string>
    
     <!-- View Answer Activity Strings-->
    <string name="viewAnswerHeader">uw antwoord</string>
    <string name="deleteAnswer">delete antwoord</string>
    <string name="listMessagesHeader">Message List</string>
    
    <!-- OSM Downloader -->
    <string name="startDownloading">Start downloaden kaart</string>
    <string name="offlineDownloadExplanation">Deze game ondersteunt het downloaden van map tegels, zodat deze app de kaart kan blijven gebruiken zelfs wanneer er geen netwerk connectie meer is. Klik op de onderstaande knop om alle relevante kaarten te downloaden. Let op, dit kan een aanzienlijke hoeveelheid opslagcapaciteit vergen</string>    
    <string name="downloadMap">Download kaart</string>
    <string name="deleteMap">Verwijder kaart</string>
    
    <!--Game authoring Activity Strings-->
    <string name="buttonNewGameText">New Game</string>
    <string name="buttonNewGeneralItemText">Create</string>
    <string name="buttonSearchGeneralItemText">Reuse</string>
    <string name="buttonNewRunText">New Run</string>
    <string name="buttonNewTeamText">New Team</string>    
    <string name="listGamesHeader">Game List</string>
    <string name="listRunsHeader">Run List</string>
	<string name="listTeamsHeader">Teams List</string>
	<string name="newTeamHeader">New Team</string>
	<string name="editTeamHeader">Team description</string>
	<string name="newRunHeader">New run</string>
	<string name="editRunHeader">Run description</string>    
    <string name="newGameHeader">New Game</string>
    <string name="editGameHeader">Game description</string>
    <string name="deleteGameHeader">Delete game</string>
    <string name="listGeneralItemHeader">General Items List</string>
    <string name="newGeneralItemHeader">General Item</string>
    <string name="tvName">Name</string>
    <string name="tvAuthor">Author</string>
    <string name="tvGIName">Item name</string>
    <string name="tvGIDesc">Description</string>
    <string name="tvGILatitude">Latitude</string>
    <string name="tvGILongitude">Longitude</string>
    <string name="tvGIOrder">Order</string>
    <string name="cbGISabd">Simple action based dependency</string>
    <string name="cbGIAl">Automatically launch</string>
    <string name="cbGIOq">Open question</string>
    <string name="tvGISabd">Simple action based dependency</string>
    <string name="tvGIAl">Automatically launch</string>
    <string name="tvGIOq">Open question</string>
    <string name="tvGIUrl">URL</string>
    
    <string name="licenseby">CC-BY</string>
    <string name="licensebysa">CC-BY-SA</string>
    <string name="licensebynd">CC-BY-ND</string>
    <string name="licensebync">CC-BY-NC</string>
    <string name="licensebyncsa">CC-BY-NC-SA</string>
    <string name="licensebyncnd">CC-BY-NC-ND</string>
    <string name="licensebypd">CC-BY-PD</string>
    <string name="licensebynpd">CC-BY-NPD</string>
    
    <string-array name="access_array">
        <item>Private</item>
        <item>Anyone with link</item>
        <item>Public on the web</item>
    </string-array>
    <string-array name="change_array">
        <item>Is owner</item>
        <item>Can view</item>
    </string-array>
    
     <!--Todo-->
     <string name="makeAnnotation">Wil je hier een aantekening maken?</string>
     <string name="reset">RESET</string>
     <string name="refresh">VERNIEUW</string>
     <string name="resetQuestion">Ben je zeker dat je al je vooruitgang wil verwijderen?</string>
     
     <string name="downloadBusy">Even geduld. Bestand is nog niet gedownloaded.</string>
     <string name="warningDownloadBusy">WAARSCHUWING: sommige bestanden zijn nog niet gedownload.</string>
     <string name="errorDownloadFailed">FOUT: sommige bestanden konden niet gedownload worden.</string>
     
</resources>
