<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tvNewGIName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGIName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNewGIName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tvNewGIUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGIUrl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNewGIUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvGIDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGIDesc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etGIDesc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>    
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tvNewGILatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGILatitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNewGILatitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tvNewGILongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGILongitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNewGILongitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/tvNewGIOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGIOrder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNewGIOrder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cbGINarratorSabd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvGISabd" />

        <CheckBox
            android:id="@+id/cbGINarratorAl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/tvGIAl" />

        <CheckBox
            android:id="@+id/cbGINarratorOq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/tvGIOq" />
    </LinearLayout>

    
    
    <Button
        android:id="@+id/bNewGeneralItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

</LinearLayout>