<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<EditText android:id="@+id/email" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:background="@android:drawable/editbox_background"
		android:layout_weight="0" 
		android:inputType="text"
		android:hint="@string/uNameHint"/>
	<EditText android:id="@+id/password" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:background="@android:drawable/editbox_background"
		android:layout_weight="0" 
		android:password="true"
		android:inputType="textNoSuggestions|text"
		android:hint="@string/passwordHint"/>

	<CheckBox
	    android:id="@+id/sendInstructions"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:text="@string/sendInstructions" />
		
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center_horizontal">
		
		<Button
		    android:id="@+id/loginButton"
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content"
		    
		    android:text="Login"
		     android:maxLines="1"
		     />

		<Button android:id="@+id/resetLoginButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Reset" 
			 android:maxLines="1"
			/>

	</LinearLayout>


</LinearLayout>
